--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             @media (max-width: 575px) {
                     .videoCallout
                     {
-                        margin-left: 50px;
-                        margin-right: 50px;
+                        margin-left: 35px;
+                        margin-right: 35px;
                     }
                 }
             .videoCallout a
@@ -113,12 +113,12 @@
         </style>
 		
 
-        <div class="container">
+        <div class="container pt-4">
             <div class="row">
-              <div class="col col-sm text-center">
+              <div class="col-4 col-sm text-center">
                 <img src="/img/greeting-normal.png" class="DcAvatar">
               </div>
-              <div class="col col-sm text-center">
+              <div class="col-8 col-sm text-center">
                 <div class="speechBubble">
                     <p class="h5 fw-bold">Welcome the Distracted Coder Website</p>
                     <p>Honestly, I think I purchased the domain too soon so I'll finish the website later. Whoops.</p>
@@ -136,7 +136,7 @@
             <div class="row py-4">
               <div class="col-9 text-center youtube m-auto">
                   <p class="fw-bold">So come on, will you help a guy out?</p>
-                <a href="https://www.youtube.com/c/DistractedCoder"><img src="/img/subscribe.png" style="max-height: 70px;"></a>
+                <a href="https://www.youtube.com/c/DistractedCoder"><img src="/img/subscribe.png" style="max-width: 100%; max-height: 70px;"></a>
               </div>
             </div>
         </div>
