--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             }
             .DcAvatar
             {
+                position: sticky;
+                top: 0;
                 width: auto;
                 max-width: 100%;
                 height: auto;
