--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
     <div class="text-center container">
         <h2 style="margin-bottom: 3px;margin-top: 15px;">Secret Giveaway Code</h2>
-            <p style="background-color: gold; padding: 6px; border-radius: 5px;" class="col-2 m-auto h5">POKEMONGO</p>
+            <p style="background-color: gold; padding: 6px; border-radius: 5px;" class="col-sm-4 m-auto h5">POKEMONGO</p>
     </div>
 
     <div class="container">
