--- a/tracker.html
+++ b/tracker.html
@@ -61,6 +61,7 @@
             ["Mario + Rabbids Sparks of Hope", new Date(2022,10-1,20)],
             ["Bayonetta 3", new Date(2022,10-1,28)],
             ["Sonic Frontiers", new Date(2022,11-1,7)],
+            ["My Giveaway", new Date(2022,11-1,9)],
             ["God of War Ragnarök", new Date(2022,11-1,9)],
             ["Pokémon Scarlet and Violet", new Date(2022,11-1,18)],
             ["Dragon Quest Treasures", new Date(2022,12-1,9)],
