--- a/tracker.html
+++ b/tracker.html
@@ -59,12 +59,11 @@
     <script>
         var games = [                                //year,month,day
             ["Mario + Rabbids Sparks of Hope", new Date(2022,10-1,20)],
-            ["Bayonetta 3", new Date(2022,10-1,28)],
             ["Sonic Frontiers", new Date(2022,11-1,7)],
             ["My Giveaway", new Date(2022,11-1,9)],
-            ["God of War Ragnarök", new Date(2022,11-1,9)],
             ["Pokémon Scarlet and Violet", new Date(2022,11-1,18)],
             ["Dragon Quest Treasures", new Date(2022,12-1,9)],
+            ["Sonic Prime - Netflix", new Date(2022,12-1,15)],
             ["Hogwarts Legacy", new Date(2023,2-1,10)],
             ["Kirby's Return to Dream Land Deluxe", new Date(2023,2-1,24)],
             ["Minecraft Legends*", new Date(2023,3-1,1)],
