--- a/tracker.html
+++ b/tracker.html
@@ -41,11 +41,13 @@
     <h2>Welcome to my game tracker page</h2>
     <p>Should this really be on my website?</p>
     <p>No but who cares.</p>
-    <p style="margin-bottom: 35px;">
+    <p style="margin-bottom: 35px; font-weight: bold;">
         <span class="verySoon">0-7 days</span>&nbsp;&nbsp;&nbsp;
         <span class="soon">8-21 days</span>&nbsp;&nbsp;&nbsp;
         <span class="coming">22-37 days</span>&nbsp;&nbsp;&nbsp;
         <span class="far">38+ days</span>
+        <br>
+        * date is not confirmed
     </p>
 
   
@@ -59,12 +61,12 @@
     <script>
         var games = [                                //year,month,day
             ["Mario + Rabbids Sparks of Hope", new Date(2022,10-1,20)],
-            ["Sonic Frontiers", new Date(2022,11-1,7)],
+            //["Sonic Frontiers", new Date(2022,11-1,7)],
             ["My Giveaway", new Date(2022,11-1,9)],
-            ["Pokémon Scarlet and Violet", new Date(2022,11-1,18)],
-            ["Dragon Quest Treasures", new Date(2022,12-1,9)],
+            //["Pokémon Scarlet and Violet", new Date(2022,11-1,18)],
+            //["Dragon Quest Treasures", new Date(2022,12-1,9)],
             ["Sonic Prime - Netflix", new Date(2022,12-1,15)],
-            ["Hogwarts Legacy", new Date(2023,2-1,10)],
+            //["Hogwarts Legacy", new Date(2023,2-1,10)],
             ["Kirby's Return to Dream Land Deluxe", new Date(2023,2-1,24)],
             ["Minecraft Legends*", new Date(2023,3-1,1)],
             ["The Super Mario Bros. Movie", new Date(2023,4-1,7)],
