small css tweak

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <li>slide soldiers link</li>
         </ol>
         <h1>slide soldier section link</h1>
-        <h1>.</h1>
+        <h1>favicons</h1>
         <h1>.</h1>
         <h1>.</h1>
         <h1>.</h1>
