favicons and cleanup

--- a/jquery/header.html
+++ b/jquery/header.html
@@ -10,10 +10,10 @@
 
             <!--<a href="#" class="active-nav-breadcrumb">-->
             <span class="nav-right text-center">
-                <a href="#">
+                <a href="../SlideSoldiers/index.html">
                     <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-brands fa-steam"></i><span class="nav-label">Slide Soldiers</span></div>
                 </a>
-                <a href="#">
+                <a href="../About/index.html">
                     <div class="nav-item font-handwritten nav-icon nav-bg"><i class="fa-solid fa-user"></i><span class="nav-label">About us</span></div>
                 </a>
                 <a href="https://www.youtube.com/@DistractedCoder" target="_blank">
