--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Distracted Coder</title>
     <meta name="Description" content="Distracted Coder is a small indie game development team">
+
+{% include head.html %}
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
@@ -78,14 +82,19 @@
             <div class="row">
                 <div class="col-12 col-md-6 d-flex align-items-stretch">
                     <div class="h-card-thumb ss-thumb"></div>
-                    <div class="ss-body text-center">
+                    <div class="ss-body text-center pb-0">
                         <p>Slide Soldiers is a <b>new twist on sliding block puzzles</b>! It's not about reaching the goal, just hitting the targets. Once you start moving, there's no stopping till you hit a wall.</p>
-                        <p>Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
-                        <a href="#"><button class="btn btn-primary">
+                        <p class="mb-0">Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
+                        <a href="../SlideSoldiers/index.html"><button class="btn btn-primary d-none d-md-inline-block my-3">
                                 Check out the Full Features!
-                                <!-- <i class="fa-solid fa-puzzle-piece"></i> -->
                             </button></a>
                     </div>
+                </div>
+                <div class="col-12  d-inline-block d-md-none text-center my-3">
+                        <a href="../SlideSoldiers/index.html"><button class="btn btn-primary">
+                                Check out the Full Features!
+                            </button></a>
+
                 </div>
                 <div class="col-12 col-md-6 ss-screenshots px-5 my-3 d-flex align-items-center">
 
@@ -231,32 +240,6 @@
         </noscript>
     </footer>
 
-
-
-
-
-
-
-
-
-    <section class="px-5">
-        <h1>header LINKS</h1>
-        <ol>
-            <li>slide soldiers link</li>
-            <li>about us link</li>
-        </ol>
-        <h1>footer LINKS</h1>
-        <ol>
-            <li>about us link</li>
-            <li>slide soldiers link</li>
-        </ol>
-        <h1>slide soldier section link</h1>
-        <h1>favicons</h1>
-        <h1>.</h1>
-        <h1>.</h1>
-        <h1>.</h1>
-
-    </section>
 
 </body>
 
