--- a/jquery/footer.html
+++ b/jquery/footer.html
@@ -21,8 +21,8 @@
                                 <div class="footer-section-title"><b>Sitemap</b></div>
                                 <ul>
                                     <li><a href="../index.html">Home</a></li>
-                                    <li><a href="#">About Us</a></li>
-                                    <li><a href="#">Slide Soldiers</a></li>
+                                    <li><a href="../About/index.html">About Us</a></li>
+                                    <li><a href="../SlideSoldiers/index.html">Slide Soldiers</a></li>
                                 </ul>
                                 <div class="footer-divider"></div>
                             </div>
