--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+---
+title: "Distracted Coder"
+description: "Distracted Coder is a small indie game development team"
+---
+
 <!doctype html>
 <html lang="en">
 
@@ -5,8 +10,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Distracted Coder</title>
-    <meta name="Description" content="Distracted Coder is a small indie game development team">
+    <title>{{ page.title }}</title>
+    <meta name="description" content="{{ page.description }}">
 
 {% include head.html %}
 
