--- a/index.html
+++ b/index.html
@@ -7,49 +7,15 @@ description: "Distracted Coder is a small indie game development team"
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title>{{ page.title }}</title>
-    <meta name="description" content="{{ page.description }}">
-
-{% include head.html %}
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <script src="https://kit.fontawesome.com/1f28aba095.js" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="/js/dc.js"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Sue+Ellen+Francisco&family=Suez+One&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/css/dc.css">
-
-    <script>
-        $(function () {
-            $("#header").load("/jquery/header.html");
-            $("#footer").load("/jquery/footer.html");
-        });
-    </script>
+    
+    {% include head.html %}
 
 </head>
 
 <body class="page-grid">
 
     <header>
-        <div id="header"></div>
-
-
-
-
-        <noscript style="width: 100%;">
-            <div style="font-size: 22px; color: red;">
-                This page requires javascript to run correctly. Parts may be missing or function incorrectly.
-            </div>
-        </noscript>
+        {% include header.html %}
     </header>
 
 
@@ -235,14 +201,7 @@ description: "Distracted Coder is a small indie game development team"
 
 
     <footer>
-        <div id="footer"></div>
-
-
-        <noscript style="width: 100%;">
-            <div style="font-size: 22px; color: red;">
-                This page requires javascript to run correctly. Parts may be missing or function incorrectly.
-            </div>
-        </noscript>
+        {% include footer.html %}
     </footer>
 
 
