twitter social images

--- a/SlideSoldiers/index.html
+++ b/SlideSoldiers/index.html
@@ -1,7 +1,7 @@
 ---
 title: "Slide Soldiers"
 description: "Slide Soldiers is a new twist on sliding block puzzles coming to Steam Q2 2026"
-social_image: /favicons/social-image-slide-soldiers.png
+social_image: https://distractedcoder.com/favicons/social-image-slide-soldiers.png
 ---
 
 <!doctype html>
