--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ description: "Distracted Coder is a small indie game development team"
                     <div class="ss-body text-center pb-0">
                         <p>Slide Soldiers is a <b>new twist on sliding block puzzles</b>! It's not about reaching the goal, just hitting the targets. Once you start moving, there's no stopping till you hit a wall.</p>
                         <p class="mb-0">Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
-                        <a href="../SlideSoldiers/index.html"><button class="btn btn-primary d-none d-md-inline-block my-3">
+                        <a href="../slide-soldiers/index.html"><button class="btn btn-primary d-none d-md-inline-block my-3">
                                 Check out the Full Features!
                             </button></a>
                     </div>
                 </div>
                 <div class="col-12  d-inline-block d-md-none text-center my-3">
-                        <a href="../SlideSoldiers/index.html"><button class="btn btn-primary">
+                        <a href="../slide-soldiers/index.html"><button class="btn btn-primary">
                                 Check out the Full Features!
                             </button></a>
 
