--- a/404.html
+++ b/404.html
@@ -1,29 +1,14 @@
+---
+title: "404 Not Found"
+description: "Requested page does not exist"
+---
+
 <!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404</title>
-    <meta name="Description" content="Distracted Coder is a small indie game development team">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!--<script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>-->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-
-    <script src="https://kit.fontawesome.com/1f28aba095.js" crossorigin="anonymous"></script>
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jua&family=Sue+Ellen+Francisco&family=Suez+One&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="/css/dc.css">
-
-    <script>
-        $(function () {
-            $("#header").load("/jquery/header.html");
-            //$("#footer").load("/jquery/footer.html");
-        });
-    </script>
+    
+    {% include head.html %}
 
 </head>
 
@@ -84,7 +69,7 @@
     //   }
     // })();
 
-    AutoRedirect("slide-soldiers/", []);
+    AutoRedirect("slide-soldiers", ["slidesoldiers", "slide_soldiers", "slidesoldier"]);
   </script>
 
 
