--- a/404.html
+++ b/404.html
@@ -69,7 +69,8 @@ description: "Requested page does not exist"
     //   }
     // })();
 
-    AutoRedirect("slide-soldiers", ["slidesoldiers", "slide_soldiers", "slidesoldier"]);
+    //                                  real link
+    AutoRedirect("slide-soldiers", ["slide-soldiers","slidesoldiers", "slide_soldiers", "slidesoldier"]);
   </script>
 
 
