about us page updated

--- a/404.html
+++ b/404.html
@@ -69,8 +69,10 @@ description: "Requested page does not exist"
     //   }
     // })();
 
-    //                                  real link
+    //                            real link(for lowercase)
     AutoRedirect("slide-soldiers", ["slide-soldiers","slidesoldiers", "slide_soldiers", "slidesoldier"]);
+
+    AutoRedirect("about-us",       ["about-us", "aboutus", "about_us", "about"]);
   </script>
 
 
