--- a/browser-projects/index.html
+++ b/browser-projects/index.html
@@ -1,6 +1,6 @@
 ---
-title: "TITLE"
-description: "DESCRIPTION"
+title: "Browser Projects"
+description: "A collection of browser based projects and experiments."
 ---
 
 <!doctype html>
