--- a/about-us/index.html
+++ b/about-us/index.html
@@ -49,31 +49,31 @@ description: "Meet the team behind Distracted Coder."
             <p>While Distracted Coder is structurally a solo operation, I've been working with some very talented people to make it all happen.</p>
             <div class="row text-center">
                 <div class="col-6 col-md-3 mb-md-4 generic">
-                    <img src="../img/collaborators/dachi.jpg" alt="Dachi" class="collaborator-photo mb-2">
+                    <img src="/img/collaborators/dachi.jpg" alt="Dachi" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Dachi <a href="https://www.instagram.com/dachi.art/" target="_blank"><i class="fa-brands fa-instagram"></i></a></div>
                     <div class="collaborator-role">Avatar/Jester Artist</div>
                 </div>
                 <div class="col-6 col-md-3  mb-md-4">
-                    <img src="../img/collaborators/bizeedee.jpg" alt="Bizeedee" class="collaborator-photo mb-2">
+                    <img src="/img/collaborators/bizeedee.jpg" alt="Bizeedee" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Bizeedee <a href="https://www.fiverr.com/bizeedee" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -2 24 24" preserveAspectRatio="xMinYMin" class="custom-fa-icon">{% include fiver-icon-path-data.html %}</svg>
                         </a></div>
                     <div class="collaborator-role">Video Editor</div>
                 </div>
                 <div class="col-6 col-md-3 mb-md-4">
-                    <img src="../img/collaborators/jules.jpg" alt="Jules" class="collaborator-photo mb-2">
+                    <img src="/img/collaborators/jules.jpg" alt="Jules" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Julesdrawz <a href="https://x.com/Julesdrawz" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
                     <div class="collaborator-role">Slide Soldiers Artist</div>
                 </div>
                 <div class="col-6 col-md-3 mb-md-4">
-                    <img src="../img/collaborators/isaias.png" alt="Isaias" class="collaborator-photo mb-2">
+                    <img src="/img/collaborators/isaias.png" alt="Isaias" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Isaias Requena <a href="https://www.fiverr.com/isaiasrequena" target="_blank">
                             <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -2 24 24" preserveAspectRatio="xMinYMin" class="custom-fa-icon">{% include fiver-icon-path-data.html %}</svg>
                         </a></div>
                     <div class="collaborator-role">Slide Soldiers Artist</div>
                 </div>
                 <div class="col-6 col-md-3 mb-md-4">
-                    <img src="../img/collaborators/scotty.jpg" alt="Scotty" class="collaborator-photo mb-2">
+                    <img src="/img/collaborators/scotty.jpg" alt="Scotty" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Scotty Rich<a href="https://x.com/ScootyIN2D" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
                     <div class="collaborator-role">Slide Soldier Composer</div>
                 </div>
