--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@ description: "Distracted Coder is a small indie game development team"
                     <div class="ss-body text-center pb-0">
                         <p>Slide Soldiers is a <b>new twist on sliding block puzzles</b>! It's not about reaching the goal, just hitting the targets. Once you start moving, there's no stopping till you hit a wall.</p>
                         <p class="mb-0">Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
-                        <a href="../slide-soldiers/"><button class="btn btn-primary d-none d-md-inline-block my-3">
+                        <a href="slide-soldiers/"><button class="btn btn-primary d-none d-md-inline-block my-3">
                                 Check out the Full Features!
                             </button></a>
                     </div>
                 </div>
                 <div class="col-12  d-inline-block d-md-none text-center my-3">
-                        <a href="../slide-soldiers/"><button class="btn btn-primary">
+                        <a href="slide-soldiers/"><button class="btn btn-primary">
                                 Check out the Full Features!
                             </button></a>
 
@@ -72,19 +72,19 @@ description: "Distracted Coder is a small indie game development team"
                     <div id="ss-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-1.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-1.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-2.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-2.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-3.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-3.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-4.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-4.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-5.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-5.png" alt="slide soldiers screenshot">
                             </div>
                         </div>
                         <div class="ss-bottom-image-soldier"></div>
@@ -106,12 +106,12 @@ description: "Distracted Coder is a small indie game development team"
                 <div class="col-12 col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-center">
                     <span class="">Videos to Watch</span>
                     <i class="fa-solid fa-arrow-right mx-2"></i>
-                    <a href="https://www.youtube.com/@DistractedCoder"><img src="../img/youtube-logo.svg" class=""></a>
+                    <a href="https://www.youtube.com/@DistractedCoder"><img src="/img/youtube-logo.svg" class=""></a>
                 </div>
                 <div class="col-12 col-md-6 d-flex align-items-center justify-content-center">
                     <span class="">Games to Play</span>
                     <i class="fa-solid fa-arrow-right mx-2"></i>
-                    <a href="https://distractedcoder.itch.io/"><img src="../img/itch-logo.png" class=""></a>
+                    <a href="https://distractedcoder.itch.io/"><img src="/img/itch-logo.png" class=""></a>
                 </div>
             </div>
         </div>
@@ -193,7 +193,7 @@ description: "Distracted Coder is a small indie game development team"
     <section>
 
         <div class="pencil">
-            <img src="../img/pencil-black.png" alt="A pencil lying on its side">
+            <img src="/img/pencil-black.png" alt="A pencil lying on its side">
         </div>
         <div class="pencil-text font-handwritten font-pencil mb-3">Man, it really took me too long to finish the site</div>
     </section>
