--- a/slide-soldiers/index.html
+++ b/slide-soldiers/index.html
@@ -65,19 +65,19 @@ social_image: https://distractedcoder.com/favicons/social-image-slide-soldiers.p
                     <div id="ss-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="4000">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-1.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-1.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-2.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-2.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-3.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-3.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-4.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-4.png" alt="slide soldiers screenshot">
                             </div>
                             <div class="carousel-item">
-                                <img class="d-block w-100" src="../img/ss-home-screenshot-5.png" alt="slide soldiers screenshot">
+                                <img class="d-block w-100" src="/img/ss-home-screenshot-5.png" alt="slide soldiers screenshot">
                             </div>
                         </div>
                         <div class="ss-bottom-image-soldier"></div>
