--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ description: "Distracted Coder is a small indie game development team"
 
 
     <script>
-        Get5FavoriteVideos(false);
+        Get5FavoriteVideos();
     </script>
 
 
