stylized DC buttons

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@ description: "Distracted Coder is a small indie game development team"
                     <div class="ss-body text-center pb-0">
                         <p>Slide Soldiers is a <b>new twist on sliding block puzzles</b>! It's not about reaching the goal, just hitting the targets. Once you start moving, there's no stopping till you hit a wall.</p>
                         <p class="mb-0">Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
-                        <a href="slide-soldiers/"><button class="btn btn-primary d-none d-md-inline-block my-3">
-                                Check out the Full Features!
-                            </button></a>
+                        <a href="slide-soldiers/" class="d-none d-md-inline-block my-3 btn-fancy-offset">
+                                <span class="btn-fancy-offset-text">Check out the Full Features!</span>
+                        </a>
                     </div>
                 </div>
                 <div class="col-12  d-inline-block d-md-none text-center my-3">
-                        <a href="slide-soldiers/"><button class="btn btn-primary">
-                                Check out the Full Features!
-                            </button></a>
+                        <a href="slide-soldiers/" class="btn-fancy-offset">
+                                <span class="btn-fancy-offset-text">Check out the Full Features!</span>
+                        </a>
 
                 </div>
                 <div class="col-12 col-md-6 ss-screenshots px-5 my-3 d-flex align-items-center">
@@ -174,7 +174,7 @@ description: "Distracted Coder is a small indie game development team"
                         <div class="h-card-body">
                             <h4>Vicious Vine - 1 year</h4>
                             <p>
-                                Scope creep killed this one. Too many things were planned and simultaneously rushing/faking features for the trailer.
+                                Vicious Vine got too big too quickly. Too many things were planned while simultaneously rushing/faking features for the trailer and it became overwhelming. 
                             </p>
                             <div class="text-center">
                                 <a href="https://distractedcoder.itch.io/vicious-vine" target="_blank"><button class="btn btn-primary">Play the Game Jam Version <i class="fa-solid fa-arrow-up-right-from-square"></i></button></a>
