all of slide soldiers is done

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: "Distracted Coder"
+title: "Distracted Coder Home"
 description: "Distracted Coder is a small indie game development team"
 ---
 
@@ -55,13 +55,13 @@ description: "Distracted Coder is a small indie game development team"
                     <div class="h-card-thumb ss-thumb"></div>
                     <div class="ss-body text-center pb-0">
                         <p>Slide Soldiers is a <b>new twist on sliding block puzzles</b>! It's not about reaching the goal, just hitting the targets. Once you start moving, there's no stopping till you hit a wall.</p>
-                        <p class="mb-0">Or try <b>Adventure Mode</b> where you must remember where you've been or you might get lost. Navigation becomes more about remembering where you've been!</p>
+                        <p class="mb-0"><b>Adventure Mode</b> has limited visibility, you need to remember your path and follow your trail through dense forests.</p>
                         <a href="slide-soldiers/" class="d-none d-md-inline-block my-3 btn-fancy-offset">
                                 <span class="btn-fancy-offset-text">Check out the Full Features!</span>
                         </a>
                     </div>
                 </div>
-                <div class="col-12  d-inline-block d-md-none text-center my-3">
+                <div class="col-12  d-inline-block d-md-none text-center my-4">
                         <a href="slide-soldiers/" class="btn-fancy-offset">
                                 <span class="btn-fancy-offset-text">Check out the Full Features!</span>
                         </a>
@@ -100,8 +100,8 @@ description: "Distracted Coder is a small indie game development team"
     <section class="position-relative project-jumpoff">
 
         <div class="container px-5 py-5 text-center">
-            <h1>Most Projects Exist Elsewhere</h1>
-            <h5 class="small">but feel free to stick around</h5>
+            <h1 class="mb-0">Check Out My Other Projects</h1>
+            <h5 class="small font-handwritten font-pencil mt-0">or else...</h5>
             <div class="row display-6">
                 <div class="col-12 col-md-6 mb-4 mb-md-0 d-flex align-items-center justify-content-center">
                     <span class="">Videos to Watch</span>
