added henry to about us

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -60,6 +60,13 @@ description: "Meet the team behind Distracted Coder."
                         </a></div>
                     <div class="collaborator-role">Video Editor</div>
                 </div>
+                <div class="col-6 col-md-3  mb-md-4">
+                    <img src="/img/collaborators/henry.jpg" alt="Henry" class="collaborator-photo mb-2">
+                    <div class="collaborator-name">Henry Rahardja <a href="https://www.fiverr.com/hendry_rahardja" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -2 24 24" preserveAspectRatio="xMinYMin" class="custom-fa-icon">{% include fiver-icon-path-data.html %}</svg>
+                        </a></div>
+                    <div class="collaborator-role">Slide Soldiers Logo</div>
+                </div>
                 <div class="col-6 col-md-3 mb-md-4">
                     <img src="/img/collaborators/jules.jpg" alt="Jules" class="collaborator-photo mb-2">
                     <div class="collaborator-name">Julesdrawz <a href="https://x.com/Julesdrawz" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
