added new website credits

--- a/about-us/index.html
+++ b/about-us/index.html
@@ -84,6 +84,14 @@ description: "Meet the team behind Distracted Coder."
                     <div class="collaborator-name">Scotty Rich<a href="https://x.com/ScootyIN2D" target="_blank"><i class="fa-brands fa-x-twitter"></i></a></div>
                     <div class="collaborator-role">Slide Soldier Composer</div>
                 </div>
+
+                <div class="col-6 col-md-3 mb-md-4">
+                    <img src="/img/collaborators/muhammad.png" alt="Muhammad" class="collaborator-photo mb-2">
+                    <div class="collaborator-name">Muhammad Bilal <a href="https://www.fiverr.com/web_developer22" target="_blank">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="-2.5 -2 24 24" preserveAspectRatio="xMinYMin" class="custom-fa-icon">{% include fiver-icon-path-data.html %}</svg>
+                        </a></div>
+                    <div class="collaborator-role">Slide Soldiers Website</div>
+                </div>
             </div>
         </section>
     </div>
